修改antd 集成样式和 添加layout

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
     "presets": ["next/babel"],
     "plugins": [
-            ["import",{
-            "libraryName":"antd",
-            // "style":"css" //@todo bug
-        }]
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "style": "css"
+        }
+      ]
     ]
-}
+  }
+  
