--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.20.5",
+    "ioredis": "^4.14.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.12.2",
     "next": "9.0.2",
+    "null-loader": "^3.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0",
@@ -19,6 +22,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.12.0"
+    "babel-plugin-import": "^1.12.0",
+    "nodemon": "^1.19.1"
   }
 }
