--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.20.5",
     "ioredis": "^4.14.0",
+    "isomorphic-unfetch": "^3.0.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
