--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ioredis": "^4.14.0",
     "isomorphic-unfetch": "^3.0.0",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
     "next": "9.0.2",
