--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.20.5",
+    "dayjs": "^1.8.15",
     "ioredis": "^4.14.0",
     "isomorphic-unfetch": "^3.0.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
+    "lru-cache": "^5.1.1",
     "next": "9.0.2",
     "null-loader": "^3.0.0",
     "react": "16.8.6",
