--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.20.5",
+    "atob": "^2.1.2",
     "dayjs": "^1.8.15",
+    "github-markdown-css": "^3.0.1",
     "ioredis": "^4.14.0",
     "isomorphic-unfetch": "^3.0.0",
     "koa": "^2.7.0",
@@ -16,6 +18,7 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
     "lru-cache": "^5.1.1",
+    "markdown-it": "^9.1.0",
     "next": "9.0.2",
     "null-loader": "^3.0.0",
     "react": "16.8.6",
